# android-libjpeg

./: .gitignore  README.md  settings.gradle
compress/: CMakeLists.txt  build.gradle
compress/src/main/: AndroidManifest.xml
compress/src/main/cpp/: native-lib.cpp
compress/src/main/java/com/honjane/compress/: MainActivity.java
compress/src/main/java/com/honjane/compress/utils/: ImageUtils.java
compress/src/main/res/layout/: activity_main.xml
compress/src/main/res/values/: strings.xml
